@@ -222,6 +222,7 @@ CTelnetCon* CMainFrame::NewCon(string title, string url, CSite* site )
 	m_pView->SetFont(AppConfig.FontFamily, AppConfig.FontSize, false, AppConfig.AntiAliasFont);
 	m_pView->SetHyperLinkColor( &AppConfig.HyperLinkColor );
 	m_pView->SetHorizontalCenterAlign( AppConfig.HCenterAlign );
+	m_pView->SetVerticalCenterAlign( AppConfig.VCenterAlign );
 	m_pView->m_CharPaddingX = AppConfig.CharPaddingX;
 	m_pView->m_CharPaddingY = AppConfig.CharPaddingY;
 
